# rllab-inference

./: .dockerignore  .gitignore  README.md  VERSION  requirements-agent.txt  requirements.txt
agent/: gemma_server.py  robot_cli.py
agent/prompts/: monitor_parse.txt  skill_dispatch.txt
docker/: Dockerfile
docs/: CONVENTIONS.md  WORKFLOW.md
perception/: yolo_infer.py  yolo_train.py
perception/data/: parts.yaml
policy/: converter.py  eval.sh  train.sh
policy/configs/: grasp.yaml
ros2/: README.md
ros2/cam_head_resize_republisher/: README.md  package.xml  setup.cfg  setup.py
ros2/cam_head_resize_republisher/cam_head_resize_republisher/: cam_head_resize_republish.py
ros2/physical_ai_inference_client/: README.md  package.xml  setup.cfg  setup.py
ros2/physical_ai_inference_client/config/: inference.yaml  initial_positions.yaml  initial_positions_full.yaml
ros2/physical_ai_inference_client/physical_ai_inference_client/: inference_client.py  joint_slider_gui.py  record_joint_positions.py  test_send_command_server.py
ros2/physical_ai_inference_client/test/: conftest.py  test_inference_client_call_service_compat.py  test_inference_client_console_keys.py  test_inference_client_send_methods.py  test_inference_client_state_transitions.py  test_joint_slider_gui.py  test_start_inference_initial_pose_modes.py
scripts/: cyclonedds_robot.xml  gemma4_ai_worker.py  run_episode.py  setup_docker.sh  stream_zed.py  zenoh_session.json5
scripts/agent/: tr_agent.py
